adapte get all published note by get all note by status
